refactor: corrigir a configuração do outDir no tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist"
   },
   "include": ["src/**/*.ts"]
 }
