--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "moment": "^2.30.1",
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.66.0",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
+    "tsx": "^4.19.4"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.5.7",
     "@types/fs-extra": "^11.0.4",
     "@types/node-cron": "^3.0.11",
-    "@types/node-telegram-bot-api": "^0.64.8"
+    "@types/node-telegram-bot-api": "^0.64.8",
+    "pm2": "^6.0.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
